<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/content_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_alignParentStart="true"
            app:srcCompat="@drawable/logo2" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txiUsernameL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView2"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="40dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:hint="@string/korisnicko_ime"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txiPasswordL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/txiUsernameL"
            android:layout_below="@+id/txiUsernameL"
            android:layout_marginBottom="15dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/lozinka"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/bPrijava"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txiPasswordL"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:text="@string/prijava" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/face_login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bPrijava"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp" />

        <TextView
            android:id="@+id/twRegistracija"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/face_login_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="0dp"
            android:text="@string/nemate_racun" />
    </RelativeLayout>
</ScrollView>